src/scss/pages/game-page.scss
@use '../abstract/mixins' as mx;

.bg-color-code {
  background: rgb(43, 177, 255, 0.05);
}

.bg-color-gaming {
  background: rgb(172, 15, 15, 0.05);
}

.bg-color-da {
  background: rgb(48, 49, 49);
}

@keyframes wiggle {
  0%, 100% { 
    transform: rotate(0deg); 
  }
  25% { 
    transform: rotate(-3deg);
  }
  75% { 
    transform: rotate(3deg);  
  }
}


.card:hover:not(.is-flipped) .card_inner {
    animation: wiggle 0.45s ease-in-out infinite;
}

